fixed itemBought scrollbar padding in sm

--- a/src/app/components/Confirm-Page-Content/Confirm-Page-Content.module.scss
+++ b/src/app/components/Confirm-Page-Content/Confirm-Page-Content.module.scss
@@ -13,3 +13,8 @@
   background-color: rgba(0, 0, 0, .5);
   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
+
+.scrollBarContent {
+  width: calc(100% + 15px); /* Increase 15px if you increased padding-right */
+  box-sizing: content-box;
+}
